# Outbreak-Zonal-Model

./: Cargo.toml  README.md  diagnostic.R  output.csv  parameters.txt  plotter.R  plotter_multiple.R
Examples/1/: Heatmap_2dHistogram.html  heatmap_output.html  hexbin_plot.html  output.csv  parameters.txt  scatter_plot_1.html  scatter_plot_2.html  scatter_plot_final.html  surface_plot.html
Examples/2_CollectANDReplace/: Heatmap_2dHistogram.html  heatmap_output.html  hexbin_plot.html  output.csv  scatter_plot_1.html  scatter_plot_2.html  scatter_plot_final.html  surface_plot.html
src/: main.rs
