[package]
name = "Outbreak_Zonal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
statrs = "0.16.0"
serde_json = "1.0.41"
serde = {version = "1.0.102", features = ["derive"]}
csv = "1.1.6"

[profile.dev]
incremental = false